--- a/carac.ui
+++ b/carac.ui
@@ -66,6 +66,9 @@
           </item>
           <item>
            <layout class="QVBoxLayout" name="verticalLayout">
+            <property name="spacing">
+             <number>0</number>
+            </property>
             <item>
              <widget class="QLabel" name="labelValeur">
               <property name="text">
@@ -79,7 +82,7 @@
                <bool>true</bool>
               </property>
               <property name="value">
-               <number>0</number>
+               <number>50</number>
               </property>
               <property name="format">
                <string>%p</string>
