diverses améiorations liées à destinNuclear
images, dans les choix, choix affichés horizontalement, jauge plus pratique, gifs animés

--- a/effet.ui
+++ b/effet.ui
@@ -136,6 +136,9 @@
      </layout>
     </widget>
    </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayoutBoutons"/>
+   </item>
   </layout>
  </widget>
  <customwidgets>
