--- a/carac.ui
+++ b/carac.ui
@@ -81,8 +81,14 @@
               <property name="enabled">
                <bool>true</bool>
               </property>
+              <property name="maximum">
+               <number>100</number>
+              </property>
               <property name="value">
-               <number>50</number>
+               <number>-1</number>
+              </property>
+              <property name="textVisible">
+               <bool>false</bool>
               </property>
               <property name="format">
                <string>%p</string>
