--- a/histoire.ui
+++ b/histoire.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color : rgba(0,0,0,0)</string>
+  </property>
   <widget class="QWidget" name="histoireLayout" native="true">
    <property name="geometry">
     <rect>
