--- a/carac.ui
+++ b/carac.ui
@@ -19,6 +19,9 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color : rgba(211, 215, 207,180)</string>
+  </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="spacing">
     <number>0</number>
@@ -43,7 +46,7 @@
         <string extracomment="youpi je suis une tooltip"/>
        </property>
        <property name="autoFillBackground">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
        <property name="title">
         <string/>
