--- a/evt.ui
+++ b/evt.ui
@@ -46,6 +46,9 @@
        <height>0</height>
       </size>
      </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgba(0,0,0,0)</string>
+     </property>
      <property name="title">
       <string/>
      </property>
