--- a/univers.ui
+++ b/univers.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Aventure</class>
- <widget class="QMainWindow" name="Aventure">
+ <class>Univers</class>
+ <widget class="QMainWindow" name="Univers">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -17,6 +17,12 @@
    <string notr="true">background-color : rgba(0,0,0,0)</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
    <widget class="QWidget" name="Fond" native="true">
     <property name="geometry">
      <rect>
@@ -27,7 +33,7 @@
      </rect>
     </property>
     <property name="sizePolicy">
-     <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
@@ -45,10 +51,13 @@
      <property name="bottomMargin">
       <number>0</number>
      </property>
+     <property name="spacing">
+      <number>0</number>
+     </property>
      <item row="0" column="0">
       <widget class="QWidget" name="persoWidget" native="true">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+        <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -56,13 +65,13 @@
        <property name="minimumSize">
         <size>
          <width>150</width>
-         <height>500</height>
+         <height>900</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>250</width>
-         <height>16777215</height>
+         <height>900</height>
         </size>
        </property>
        <layout class="QGridLayout" name="gridLayout_2"/>
@@ -71,7 +80,7 @@
      <item row="0" column="1">
       <widget class="QWidget" name="histoireWidget" native="true">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+        <sizepolicy hsizetype="Fixed" vsizetype="Maximum">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -79,27 +88,30 @@
        <property name="minimumSize">
         <size>
          <width>500</width>
-         <height>500</height>
+         <height>900</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>1030</width>
+         <height>900</height>
         </size>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <property name="spacing">
-         <number>3</number>
-        </property>
-        <property name="sizeConstraint">
-         <enum>QLayout::SetMinimumSize</enum>
+         <number>0</number>
         </property>
         <property name="leftMargin">
-         <number>3</number>
+         <number>0</number>
         </property>
         <property name="topMargin">
-         <number>3</number>
+         <number>0</number>
         </property>
         <property name="rightMargin">
-         <number>3</number>
+         <number>0</number>
         </property>
         <property name="bottomMargin">
-         <number>3</number>
+         <number>0</number>
         </property>
        </layout>
       </widget>
