Ajout du système de thème

--- a/carac.ui
+++ b/carac.ui
@@ -110,7 +110,7 @@
   <customwidget>
    <class>AspectRatioLabel</class>
    <extends>QLabel</extends>
-   <header location="global">aspectratiolabel.h</header>
+   <header>aspectratiolabel.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
