--- a/effet.ui
+++ b/effet.ui
@@ -145,7 +145,7 @@
   <customwidget>
    <class>AspectRatioLabel</class>
    <extends>QLabel</extends>
-   <header location="global">aspectratiolabel.h</header>
+   <header>aspectratiolabel.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
