Transmission de compétences à GestionnaireCarac

--- a/carac.ui
+++ b/carac.ui
@@ -59,6 +59,12 @@
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <item>
            <widget class="AspectRatioLabel" name="imageCarac">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="toolTip">
              <string>youpi je suis une tooltip !!</string>
             </property>
