--- a/effet.ui
+++ b/effet.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>300</width>
-    <height>200</height>
+    <width>350</width>
+    <height>131</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -109,6 +109,12 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
