--- a/choix.ui
+++ b/choix.ui
@@ -49,7 +49,7 @@
    <item>
     <widget class="QPushButton" name="bouton">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
