ajout de choix dans les lancer de dés

--- a/effet.ui
+++ b/effet.ui
@@ -116,7 +116,23 @@
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QWidget" name="lancerDeWidget" native="true">
-        <layout class="QVBoxLayout" name="lancerDeLayout"/>
+        <layout class="QVBoxLayout" name="lancerDeLayout">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+        </layout>
        </widget>
       </item>
       <item>
