--- a/evt.ui
+++ b/evt.ui
@@ -52,7 +52,7 @@
      <property name="maximumSize">
       <size>
        <width>1030</width>
-       <height>900</height>
+       <height>16777215</height>
       </size>
      </property>
      <property name="styleSheet">
