--- a/perso.ui
+++ b/perso.ui
@@ -56,7 +56,7 @@
        </property>
        <layout class="QVBoxLayout" name="portraitLayout">
         <item>
-         <widget class="AspectRatioLabel" name="imagePortrait">
+         <widget class="QLabel" name="imagePortrait">
           <property name="maximumSize">
            <size>
             <width>250</width>
@@ -157,13 +157,6 @@
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>AspectRatioLabel</class>
-   <extends>QLabel</extends>
-   <header>aspectratiolabel.h</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
