--- a/abs/carac.ui
+++ b/abs/carac.ui
@@ -22,7 +22,7 @@
   <property name="styleSheet">
    <string notr="true">background-color : rgba(211, 215, 207,180)</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="spacing">
     <number>0</number>
    </property>
@@ -39,7 +39,7 @@
     <number>0</number>
    </property>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <layout class="QVBoxLayout" name="verticalLayout_3">
      <item>
       <widget class="QGroupBox" name="caracBox">
        <property name="toolTip">
@@ -68,6 +68,9 @@
             <property name="text">
              <string/>
             </property>
+            <property name="scaledContents">
+             <bool>true</bool>
+            </property>
            </widget>
           </item>
           <item>
@@ -76,7 +79,7 @@
              <number>0</number>
             </property>
             <item>
-             <widget class="QLabel" name="labelValeur"/>
+             <widget class="QLabel" name="labelValeurDansBox"/>
             </item>
             <item>
              <widget class="QProgressBar" name="jaugeCarac">
@@ -102,6 +105,13 @@
          </layout>
         </item>
        </layout>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="labelValeur">
+       <property name="text">
+        <string/>
+       </property>
       </widget>
      </item>
     </layout>
