--- a/abs/carac.ui
+++ b/abs/carac.ui
@@ -57,6 +57,16 @@
        <number>3</number>
       </property>
       <item>
+       <widget class="QLabel" name="imageDansBox">
+        <property name="text">
+         <string/>
+        </property>
+        <property name="scaledContents">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <property name="spacing">
          <number>2</number>
